--- a/scr/WebApplication1/appsettings.json
+++ b/scr/WebApplication1/appsettings.json
@@ -1,10 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+  "Data": {
+    "AlcoholStore": {
+      "ConnectionString": "Data Source=DESKTOP-JI7O1FH\\SQLEXPRESS;Database=AlcoholStorePro;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "AllowedHosts": "*"
+  }
 }
